--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ro">
 <head>
@@ -11,6 +12,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Realitate, nu iluzii</title>
   <style>
+
+/* Modul Zi/Noapte */
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+.toggle-dark {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  padding: 10px 16px;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  background-color: #444;
+  color: white;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.dark-mode .toggle-dark {
+  background-color: #eee;
+  color: #111;
+}
+
     :root {
       --primary: #1e3a8a;
       --accent: #f97316;
@@ -204,6 +235,36 @@
 </style>
 
 <style>
+
+/* Modul Zi/Noapte */
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+.toggle-dark {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  padding: 10px 16px;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  background-color: #444;
+  color: white;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.dark-mode .toggle-dark {
+  background-color: #eee;
+  color: #111;
+}
+
 body {
   background: linear-gradient(-45deg, #e0e0e0, #bde0fe, #e0e0e0, #ffffff);
   background-size: 400% 400%;
@@ -218,6 +279,36 @@ body {
 
 
 <style>
+
+/* Modul Zi/Noapte */
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+.toggle-dark {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  padding: 10px 16px;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  background-color: #444;
+  color: white;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.dark-mode .toggle-dark {
+  background-color: #eee;
+  color: #111;
+}
+
 #typing-effect::after {
   content: '|';
   animation: blink 1s infinite;
@@ -230,6 +321,36 @@ body {
 
 
 <style>
+
+/* Modul Zi/Noapte */
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+.toggle-dark {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  padding: 10px 16px;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  background-color: #444;
+  color: white;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.dark-mode .toggle-dark {
+  background-color: #eee;
+  color: #111;
+}
+
 /* Efect hover pe butoanele de meniu */
 nav a {
   transition: all 0.3s ease;
@@ -261,6 +382,36 @@ button:active, .btn:active {
 
 
 <style>
+
+/* Modul Zi/Noapte */
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+.toggle-dark {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  padding: 10px 16px;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  background-color: #444;
+  color: white;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.dark-mode .toggle-dark {
+  background-color: #eee;
+  color: #111;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -489,42 +640,20 @@ function typeWriter() {
 window.onload = typeWriter;
 </script>
 
+<button class="toggle-dark" onclick="toggleMode()">🌗 Zi / Noapte</button>
+
+<script>
+  function toggleMode() {
+    document.body.classList.toggle("dark-mode");
+    localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode"));
+  }
+
+  window.onload = () => {
+    if (localStorage.getItem("dark-mode") === "true") {
+      document.body.classList.add("dark-mode");
+    }
+  };
+</script>
+
 </body>
 </html>
-<!-- 🌗 LIGHT/DARK MODE TOGGLE -->
-<div style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-  <button onclick="toggleMode()" style="padding: 8px 12px; border-radius: 5px; background: #333; color: white; border: none;">🌓 Mod Zi/Noapte</button>
-</div>
-<script>
-function toggleMode() {
-  const currentBg = getComputedStyle(document.body).backgroundColor;
-  if (currentBg === 'rgb(17, 24, 39)' || document.body.classList.contains('dark')) {
-    document.body.style.backgroundColor = '#f1f5f9';
-    document.body.style.color = '#1e293b';
-    document.body.classList.remove('dark');
-  } else {
-    document.body.style.backgroundColor = '#111827';
-    document.body.style.color = '#f1f5f9';
-    document.body.classList.add('dark');
-  }
-}
-</script>
-
-<!-- 📊 VIZITATORI FAKE -->
-<div style="text-align: center; font-size: 14px; margin-top: 40px; color: gray;">
-  Aproximativ <span id="vizitatori"></span> vizitatori unici au accesat această pagină.
-</div>
-<script>
-  const min = 324;
-  const max = 763;
-  document.getElementById("vizitatori").innerText = Math.floor(Math.random() * (max - min + 1)) + min;
-</script>
-
-<!-- 📝 FEEDBACK FORM -->
-<div style="max-width: 500px; margin: 50px auto; padding: 20px; background: #ffffff10; border-radius: 8px;">
-  <h3 style="margin-bottom: 10px;">Ai o idee sau un feedback?</h3>
-  <form action="https://formspree.io/f/mwkglgqa" method="POST">
-    <textarea name="mesaj" placeholder="Scrie un mesaj anonim..." rows="4" style="width: 100%; padding: 10px; border: 1px solid #ccc;"></textarea>
-    <button type="submit" style="margin-top: 10px; background-color: #1e3a8a; color: white; padding: 10px 15px; border: none; border-radius: 5px;">Trimite feedback</button>
-  </form>
-</div>
