--- a/index.html
+++ b/index.html
@@ -294,14 +294,23 @@ html {
   <main>
     
 <!-- HERO SECTION NOUĂ -->
-<section id="acasa" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: #000; color: white; text-align: center; padding: 2rem;">
-  <h1 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Stop Pariuri.</h1>
-  <p style="font-size: 1.3rem; margin-bottom: 2rem;">Escape the matrix, be the change.</p>
-  <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
-    <a href="#resurse" style="padding: 0.75rem 1.5rem; background-color: transparent; border: 2px solid white; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">📚 Află adevărul</a>
-    <a href="#contact" style="padding: 0.75rem 1.5rem; background-color: #f97316; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">💬 Cere ajutor acum</a>
+
+<!-- HERO SECTION CU VIDEO -->
+<section id="acasa" style="position: relative; height: 100vh; overflow: hidden; display: flex; justify-content: center; align-items: center; text-align: center;">
+  <video autoplay muted loop playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
+    <source src="https://cdn.coverr.co/videos/coverr-man-walking-under-a-bridge-4289/1080p.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.5); border-radius: 8px;">
+    <h1 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Stop Pariuri.</h1>
+    <p style="font-size: 1.3rem; margin-bottom: 2rem;">Escape the matrix, be the change.</p>
+    <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
+      <a href="#resurse" style="padding: 0.75rem 1.5rem; background-color: transparent; border: 2px solid white; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">📚 Află adevărul</a>
+      <a href="#contact" style="padding: 0.75rem 1.5rem; background-color: #f97316; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">💬 Cere ajutor acum</a>
+    </div>
   </div>
 </section>
+
 
 
     <section id="despre">
