--- a/index.html
+++ b/index.html
@@ -250,6 +250,53 @@
       display: flex;
     }
   }
+
+<style>
+  .menu-toggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #ffffff;
+    color: #111;
+    padding: 8px 14px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 1001;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
+  }
+
+  .menu-toggle:hover {
+    background-color: #f97316;
+    color: white;
+  }
+
+  .dropdown-menu {
+    display: none;
+    position: fixed;
+    top: 60px;
+    right: 20px;
+    background-color: rgba(30, 58, 138, 0.95);
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
+    padding: 10px 20px;
+    z-index: 1000;
+  }
+
+  .dropdown-menu a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 10px 0;
+    font-weight: bold;
+  }
+
+  .dropdown-menu a:hover {
+    color: var(--accent);
+  }
+</style>
+
 </style>
 
 </style>
@@ -319,6 +366,19 @@ html {
 
 </head>
 <body>
+
+<div class="menu-toggle" onclick="toggleMenu()">MENIU</div>
+
+<div class="dropdown-menu" id="dropdownMenu">
+  <a href="#acasa">Acasă</a>
+  <a href="#despre">Despre</a>
+  <a href="#resurse">Resurse</a>
+  <a href="#consiliere">Consiliere</a>
+  <a href="#pachete">Pachete</a>
+  <a href="#faq">FAQ</a>
+  <a href="#contact">Contact</a>
+</div>
+
 
 <h1 id="typing-effect" style="color:#ffffff; background-color:#000; padding:10px; text-align:center; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
 
@@ -660,6 +720,22 @@ window.onload = typeWriter;
   document.addEventListener('click', (event) => {
     if (!hamburger.contains(event.target) && !dropdown.contains(event.target)) {
       dropdown.style.display = 'none';
+    }
+  });
+</script>
+
+
+<script>
+  function toggleMenu() {
+    const menu = document.getElementById('dropdownMenu');
+    menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+  }
+
+  document.addEventListener('click', function(event) {
+    const menu = document.getElementById('dropdownMenu');
+    const toggle = document.querySelector('.menu-toggle');
+    if (!menu.contains(event.target) && !toggle.contains(event.target)) {
+      menu.style.display = 'none';
     }
   });
 </script>
