--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ html {
 </head>
 <body>
 
-<div class="menu-toggle" onclick="toggleMenu()">MENIU</div>
+
 
 <div class="dropdown-menu" id="dropdownMenu">
   <a href="#acasa">Acasă</a>
@@ -406,7 +406,12 @@ html {
     <source src="https://cdn.coverr.co/videos/coverr-man-walking-under-a-bridge-4289/1080p.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  <div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.5); border-radius: 8px;">
+  
+<div style="position: absolute; top: 20px; right: 20px; z-index: 10;">
+  
+</div>
+
+<div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.5); border-radius: 8px;">
     <h1 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Stop Pariuri.</h1>
     <p style="font-size: 1.3rem; margin-bottom: 2rem;">Escape the matrix, be the change.</p>
     <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
